test: 기능 목록에 맞춰 테스트를 추가함